b=17546. Changed block frame code to save/restore space manager when create a space manager, and changes button code to use the NS_BLOCK_SPACE_MGR flag when creating the area frame